# market_dev

./: .dockerignore  .gitignore  AGENTS.md  Makefile  advice.md  docker-compose.prod.yml  docker-compose.yml  task_plan.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.capture  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  001_users.py  002_instruments.py  003_bars.py  004_strategy.py  005_strategy_runs.py  006_monitor_states.py  007_selection_plans.py  008_monitoring_plans.py  009_notification.py  010_config.py  011_job_runs.py  012_outbox.py  013_user_watchlist.py  014_membership.py  015_strategy_batch.py  016_run_published_at.py  017_filter_indexes.py  018_multi_period_bars.py  019_stock_memo.py  020_remove_secret_ref.py  021_drop_vdi_uq.py  022_monitor_evaluations.py  023_event_recipients.py  024_strategy_def_env_fields.py  025_eval_lease_fields.py  026_strategy_run_lease_fields.py  027_job_runs_and_heartbeats.py  028_outbox_deferred.py  029_job_run_worker_and_cycle.py  030_strategy_run_attempt_no.py  031_message_delivery_type.py  032_dsa_backfill.py  033_message_delivery_state_machine.py  034_message_delivery_group_id.py  035_strategy_run_error_fields.py  036_scheduler_job_run_key.py  037_job_run_events.py  038_scheduler_job_run_key_partial_index.py  039_instruments_pinyin_initials.py  (+28 more)
backend/app/: __init__.py  capture_main.py  config.example.py  config.py  db.py  main.py  worker.py
backend/app/api/: __init__.py  admin_after_close.py  admin_beta_applications.py  admin_config.py  admin_membership.py  admin_subscription.py  auth.py  bars.py  calendar.py  capture.py  chart_snapshot.py  dsa_backfill.py  health.py  indicators.py  instruments.py  market.py  me.py  me_table_view_presets.py  metrics.py  monitor_states.py  monitoring_plans.py  notifications.py  plans.py  public_beta.py  selection_plans.py  stock_context.py  stock_detail_feishu.py  stock_memos.py  strategies.py  strategy_events.py  strategy_runs.py  structural_factors.py  temporal_features.py  watchlist.py
backend/app/constants/: beta_application.py  capture.py  factor_contract.py  indicator_contract.py  indicator_view.py  monitor_source_types.py  plan_codes.py  plan_contract.py  strategy_keys.py  system_channel.py  user_facing_labels.py
backend/app/contracts/: algorithm_registry.py  atomic_fact_contract_v1.json  atomic_fact_presentation_v1.json  atomic_fact_product_observations_v1.json  indicator_semantics.py
backend/app/core/: __init__.py  deps.py  pytdx_adapter.py  redis_client.py  route_utils.py  security.py  time.py
backend/app/models/: __init__.py  _table_meta.py  access_audit_log.py  bar.py  base.py  beta_application.py  calendar.py  capture_job.py  composite_event.py  config.py  dsa_backfill.py  event_recipient.py  instrument.py  job.py  job_run_event.py  market_board.py  membership.py  monitor_evaluation.py  monitor_state.py  monitoring_plan.py  monitoring_plan_state.py  notification.py  outbox.py  plan.py  research_feature_matrix.py  scheduler_job_run.py  selection_plan.py  selection_plan_run.py  stock_feature_snapshot.py  stock_feature_snapshot_run.py  stock_memo.py  stock_state_event.py  strategy.py  strategy_event.py  strategy_run.py  subscription.py  table_view_preset.py  user.py  watchlist.py  worker_heartbeat.py
backend/app/repositories/: __init__.py  bar_repository.py  board_filter_helper.py  composite_event_repository.py  (+6 more)
backend/reports/: dsa_benchmark_20260702.md
backend/scripts/: backfill_15min_60min_all.py  backfill_15min_60min_small.py  backfill_all_periods.py  backfill_etf_weekly_monthly.py  backfill_pinyin_initials.py  backfill_weekly_monthly_small.py  classify_unresolved_stocks.py  debug_weekly_alignment.py  drop_orphan_tables.py  e2e_cycle_switching.py  feature_snapshot_backfill.py  query_missing_weekly_monthly.py  research_feature_matrix_backfill.py  research_regime_discovery.py  run_factor_audit.py  test_monitor_backtest.py  test_monitor_card_preview.py  test_monitor_e2e.py  test_multi_period_bars_small.py  trigger_dsa_batch_small.py  validate_backfill_small.py  verify_603538_step6.py  verify_backfill_small.py  verify_bars_akshare.py  verify_bars_full.py  verify_monitor_alignment.py  verify_quote_trustworthy.py
backend/tests/: allowlist.json  conftest.py  test_access_audit_log.py  test_access_control_service.py  test_adjustment_factor_calculator.py  test_admin_after_close_pipeline.py  test_admin_beta_applications.py  test_admin_subscription_users.py  test_admin_users_api.py  test_admin_worker_heartbeats_api.py  test_after_close_board_sync.py  test_after_close_endpoints.py  test_after_close_idempotent_dsa_pipeline.py  test_after_close_orchestrator.py  test_after_close_orchestrator_transaction.py  test_after_close_pipeline_service.py  test_after_close_status_detail.py  test_after_close_worker.py  test_alembic_045.py  test_alembic_upgrade_plan.py  test_algorithm_registry_architecture.py  test_architecture_rules.py  test_atomic_fact_contract_service.py  test_atomic_fact_contracts.py  test_atr_utils.py  test_auth.py  test_auth_login.py  test_bar_repository_get_recent_bars.py  test_bars.py  test_bars_api_db_first.py  test_bars_coverage_service.py  test_bars_governance.py  test_bars_scheduler_events.py  test_bars_scheduler_factor_audit.py  test_bars_vectorization.py  test_beta_application.py  test_beta_application_notifier.py  test_board_filter_helper.py  test_board_sync.py  test_board_sync_enabled_config.py  (+154 more)
backend/tools/: backfill_single_instrument.py  check_suogu_category11.py  dsa_benchmark.py
(+729 files in other folders)
