# 后端工程配置 - V1.1 交易平台重构
# 使用清华源加速依赖安装
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-platform-backend"
version = "1.1.0"
description = "多用户选股与盘中监控平台 V1.1 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "pytdx>=1.72",
    "pandas>=2.2",
    # [Dependencies] - numpy 上限：mypy 2.1.0 与 numpy 2.5.0+ 的 stub 存在语法不兼容，会
    # 导致 CI `mypy app` 崩溃并产生虚假的 site-packages 诊断；上限保持与基线生成环境一致。
    "numpy>=1.26,<2.5.0",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "httpx>=0.25.0,<0.26.0",
    "mootdx==0.11.7",
    "py-mini-racer>=0.6.0,<0.7.0",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "apscheduler>=3.11.0",
    "playwright>=1.43",
    # [Dependencies] - plotly 用于 strategy_assets/algorithms/features/* 的图表渲染
    # 历史遗漏：3d919a3 引入 import plotly 但未声明，导致 monitor worker 启动失败
    "plotly>=5.0",
    # [Dependencies] - pypinyin 用于股票名称拼音首字母生成（advice.md 第六节：拼音搜索）
    # 主数据同步时生成 pinyin_initials 落库，搜索时按拼音首字母前缀匹配
    "pypinyin>=0.51",
    # [Dependencies] - qstock 用于 board_sync_service 拉取同花顺板块目录和成分（PRD §7.5）
    # 仅在 worker 每日 17:00 调度中使用，不进入用户请求链
    # 固定版本 1.3.8（2025-03-16 最新稳定版），Docker 构建时 PIP_NO_CACHE_DIR=1
    "qstock==1.3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25.0,<0.26.0",
    "ruff>=0.3",
    "mypy==2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# 清华源配置（pip install 时生效）
[tool.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008"]  # B008: FastAPI 的 Query/Depends 作为默认参数是标准模式

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
xfail_strict = true
testpaths = ["tests"]
