# 后端工程配置 - V1.1 交易平台重构
# 使用清华源加速依赖安装
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-platform-backend"
version = "1.1.0"
description = "多用户选股与盘中监控平台 V1.1 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "pytdx>=1.72",
    "pandas>=2.2",
    # [Dependencies] - numpy 上限：mypy 2.1.0 与 numpy 2.5.0+ 的 stub 存在语法不兼容，会
    # 导致 CI `mypy app` 崩溃并产生虚假的 site-packages 诊断；上限保持与基线生成环境一致。
    "numpy>=1.26,<2.5.0",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "httpx>=0.25.0,<0.26.0",
    "mootdx==0.11.7",
    "py-mini-racer>=0.6.0,<0.7.0",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "apscheduler>=3.11.0",
    "playwright>=1.43",
    # [Dependencies] - plotly 用于 strategy_assets/algorithms/features/* 的图表渲染
    # 历史遗漏：3d919a3 引入 import plotly 但未声明，导致 monitor worker 启动失败
    "plotly>=5.0",
    # [Dependencies] - pypinyin 用于股票名称拼音首字母生成（advice.md 第六节：拼音搜索）
    # 主数据同步时生成 pinyin_initials 落库，搜索时按拼音首字母前缀匹配
    "pypinyin>=0.51",
    # [Dependencies] - qstock 用于 board_sync_service 拉取同花顺板块目录和成分（PRD §7.5）
    # 仅在 worker 每日 17:00 调度中使用，不进入用户请求链
    # C10 验证：1.3.8 的 __init__.py 导入 bt_backtest（需 backtrader+pyfolio）且 ths_em_pool.py 有
    # 模块级网络调用；1.3.1 的 __init__.py 不导入 bt_backtest，ths_em_pool 无模块级网络调用，
    # 且声明了 requests/bs4/jsonpath/multitasking 等全部依赖。经干净容器 build+import 验证。
    # qstock 1.3.1 import 阶段无顶层网络副作用，但运行时 ths_concept_name_code/ths_index_member
    # 硬编码 BeautifulSoup(res.text, "lxml") 而 METADATA 未声明 lxml。
    # pandas.read_html 默认也需要 lxml（pandas.io.html._parser_dispatch 调用
    # import_optional_dependency("lxml.etree")）。C10 决策：不添加 lxml，
    # 改为独立实现 QStockTHSAdapter（app/services/ths_adapter.py，用 httpx+bs4[html.parser]
    # 解析分页/链接/表格，不引入 lxml/backtrader/pyfolio/scikit-learn/pandas.read_html）。
    # qstock 1.3.1 仅用于 ths_code_name 行业目录 dict（硬编码数据，无网络无依赖）和
    # get_ths_header() 反爬 cookie 生成（py_mini_racer 执行 qstock/data/ths.js，不复制源码）。
    "qstock==1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25.0,<0.26.0",
    "ruff>=0.3",
    "mypy==2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# 清华源配置（pip install 时生效）
[tool.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008"]  # B008: FastAPI 的 Query/Depends 作为默认参数是标准模式

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
xfail_strict = true
testpaths = ["tests"]
